--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jobs:
       #      if: tag IS present
       script:
         - travis_wait 60 ./ci/container/exec.sh ./ci/steps/static-release.sh
+        - cd release && npm publish
     #        - ./ci/release-container/push.sh
     - name: Linux ARM64 Release
       if: tag IS present
@@ -45,18 +46,11 @@ deploy:
     bucket: "codesrv-ci.cdr.sh"
     upload_dir: "releases"
     key_file: ./ci/key.json
-    local_dir: release-gcp
+    local_dir: ./release-gcp
     on:
       tags: true
       # TODO: The gcs provider fails to install on arm64.
       condition: $TRAVIS_CPU_ARCH = amd64
-  - provider: npm
-    src: ./release
-    edge: true
-    on:
-      #      tags: true
-      all_branches: true
-      condition: $TRAVIS_JOB_NAME = "Linux Release"
 
 cache:
   timeout: 600
